compiler/lume_parser/src/snapshots/lume_parser__parser__tests__doc_comments_snapshots@struct.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"/// This is a doc comment\n            struct Foo { }\"#)"
---
[
    TypeDefinition(
        Struct(
            StructDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        45..48,
                    ),
                },
                properties: [],
                type_parameters: [],
                location: Location(
                    38..52,
                ),
                documentation: Some(
                    "This is a doc comment",
                ),
            },
        ),
    ),
]
