compiler/lume_parser/src/snapshots/lume_parser__parser__tests__doc_comments_snapshots@trait_method.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"trait Foo {\n                /// This is a doc comment\n                pub fn bar() -> void { }\n            }\"#)"
---
[
    TypeDefinition(
        Trait(
            TraitDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        6..9,
                    ),
                },
                type_parameters: [],
                methods: [
                    TraitMethodDefinition {
                        visibility: Public(
                            Public {
                                location: Location(
                                    70..73,
                                ),
                            },
                        ),
                        name: Identifier {
                            name: "bar",
                            location: Location(
                                77..80,
                            ),
                        },
                        parameters: [],
                        type_parameters: [],
                        return_type: Some(
                            Scalar(
                                ScalarType {
                                    name: "void",
                                    location: Location(
                                        86..90,
                                    ),
                                },
                            ),
                        ),
                        block: Some(
                            Block {
                                statements: [],
                                location: Location(
                                    91..94,
                                ),
                            },
                        ),
                        location: Location(
                            74..94,
                        ),
                        documentation: Some(
                            "This is a doc comment",
                        ),
                    },
                ],
                location: Location(
                    0..108,
                ),
                documentation: None,
            },
        ),
    ),
]
