compiler/lume_parser/src/snapshots/lume_parser__parser__tests__doc_comments_snapshots@type_alias.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"/// This is a doc comment\n            type Foo = Bar\"#)"
---
[
    TypeDefinition(
        Alias(
            AliasDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        43..46,
                    ),
                },
                definition: Scalar(
                    ScalarType {
                        name: "Bar",
                        location: Location(
                            49..52,
                        ),
                    },
                ),
                location: Location(
                    38..52,
                ),
                documentation: Some(
                    "This is a doc comment",
                ),
            },
        ),
    ),
]
