compiler/lume_parser/src/snapshots/lume_parser__parser__tests__enum_snapshots@extra_comma.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"enum Foo { Bar, Baz, }\")"
---
ExpectedIdentifier {
    source: NamedSource {
        name: "<test>",
        content: "enum Foo { Bar, Baz, }",
    },
    range: 21..22,
}
