compiler/lume_parser/src/snapshots/lume_parser__parser__tests__enum_snapshots@missing_comma.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"enum Foo { Bar Baz }\")"
---
UnexpectedToken {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "enum Foo { Bar Baz }",
        package: PackageId(
            0,
        ),
    },
    range: 15..18,
    expected: ,,
    actual: identifier,
}
