compiler/lume_parser/src/snapshots/lume_parser__parser__tests__enum_snapshots@multiple_variants.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"enum Foo { Bar, Baz }\")"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        5..8,
                    ),
                },
                cases: [
                    EnumDefinitionCase {
                        name: Identifier {
                            name: "Bar",
                            location: Location(
                                11..14,
                            ),
                        },
                        parameters: [],
                        location: Location(
                            11..14,
                        ),
                        documentation: None,
                    },
                    EnumDefinitionCase {
                        name: Identifier {
                            name: "Baz",
                            location: Location(
                                16..19,
                            ),
                        },
                        parameters: [],
                        location: Location(
                            16..19,
                        ),
                        documentation: None,
                    },
                ],
                location: Location(
                    0..21,
                ),
                documentation: None,
            },
        ),
    ),
]
