compiler/lume_parser/src/snapshots/lume_parser__parser__tests__enum_snapshots@multiple_variants_multiple_params.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            enum Foo {\n                Bar(int, int),\n                Baz(int, int)\n            }\"#)"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        18..21,
                    ),
                },
                cases: [
                    EnumDefinitionCase {
                        name: Identifier {
                            name: "Bar",
                            location: Location(
                                40..43,
                            ),
                        },
                        parameters: [
                            Scalar(
                                ScalarType {
                                    name: "Int32",
                                    location: Location(
                                        44..47,
                                    ),
                                },
                            ),
                            Scalar(
                                ScalarType {
                                    name: "Int32",
                                    location: Location(
                                        49..52,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            40..53,
                        ),
                    },
                    EnumDefinitionCase {
                        name: Identifier {
                            name: "Baz",
                            location: Location(
                                71..74,
                            ),
                        },
                        parameters: [
                            Scalar(
                                ScalarType {
                                    name: "Int32",
                                    location: Location(
                                        75..78,
                                    ),
                                },
                            ),
                            Scalar(
                                ScalarType {
                                    name: "Int32",
                                    location: Location(
                                        80..83,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            71..84,
                        ),
                    },
                ],
                location: Location(
                    13..98,
                ),
            },
        ),
    ),
]
