compiler/lume_parser/src/snapshots/lume_parser__parser__tests__enum_snapshots@single_variant.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"enum Foo { Bar }\")"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        5..8,
                    ),
                },
                cases: [
                    EnumDefinitionCase {
                        name: Identifier {
                            name: "Bar",
                            location: Location(
                                11..14,
                            ),
                        },
                        parameters: [],
                        location: Location(
                            11..14,
                        ),
                    },
                ],
                location: Location(
                    0..16,
                ),
            },
        ),
    ),
]
